// Original file: product.proto

import type { ProductItem as _productPackage_ProductItem, ProductItem__Output as _productPackage_ProductItem__Output } from '../productPackage/ProductItem';

export interface ProductItems {
  'items'?: (_productPackage_ProductItem)[];
}

export interface ProductItems__Output {
  'items': (_productPackage_ProductItem__Output)[];
}
